--- a/sections/footer-01.liquid
+++ b/sections/footer-01.liquid
@@ -106,6 +106,7 @@
       %}
     {%- endif -%}
   {%- endif -%}
+  {% render 'christmas-footer-decoration' %}
 </footer>
 <script type="text/javascript">
   function initDropdownColumnsFooter() {
