--- a/sections/header-mobile-switch.liquid
+++ b/sections/header-mobile-switch.liquid
@@ -118,6 +118,7 @@
                                         {%- endif -%}
                                     </a>
                                 {% endif %}
+                                {% render 'christmas-header-icon' %}
                             </div>
                         {%-  when 'customer' -%}
                             <div class="header-mobile--icon" style="--i-color: {{ block.settings.color }}">
