--- a/sections/vip-cta.liquid
+++ b/sections/vip-cta.liquid
@@ -200,7 +200,8 @@ assign btn2_text_color = section.settings.button_secondary_text_color | default:
 {
 "type": "url",
 "id": "button_primary_link",
-"label": "Link do botão"
+"label": "Link do botão",
+"info": "URL para onde o usuário será direcionado ao clicar no botão"
 },
 {
 "type": "color",
@@ -222,7 +223,8 @@ assign btn2_text_color = section.settings.button_secondary_text_color | default:
 {
 "type": "url",
 "id": "button_secondary_link",
-"label": "Link do botão"
+"label": "Link do botão (obrigatório)",
+"info": "Cole aqui o link do grupo WhatsApp VIP ou outra URL de destino"
 },
 {
 "type": "color",
