--- a/snippets/halo-product-card.liquid
+++ b/snippets/halo-product-card.liquid
@@ -32,6 +32,7 @@
     <div class="card">
         <div class="card-product{% if product.featured_media == nil %} card--text-only card--soft{% endif %}">
             <div class="card-product__wrapper">
+                {% render 'christmas-product-badge', product: product %}
                 <a class="card-media card-media--{{ media_size }}{% if settings.show_image_swap %} media--hover-effect{% endif%}"
                     href="{{ product.url | within: collection }}"
                     {% if product.featured_media %}
