--- a/snippets/product-card-03.liquid
+++ b/snippets/product-card-03.liquid
@@ -82,6 +82,7 @@
     <div class="card{% if product_card_product.media[0].media_type == 'video' %} has-first-video{% endif %}">
         <div class="card-product{% if product_card_product.featured_media == nil %} card--text-only card--soft{% endif %}">
             <div class="card-product__wrapper">
+                {% render 'christmas-product-badge', product: product_card_product %}
                 {%- if settings.show_badge -%}
                     {% render 'product-badge',
                         product: product_card_product,
